Bug 80839 - FILESAVE: Different First Footer not getting RT
Summary: FILESAVE: Different First Footer not getting RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-03 03:17 UTC by Yogesh Bharate
Modified: 2022-04-08 11:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
doc contains different first page footer (15.30 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-03 03:17 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-07-03 03:17:05 UTC
Created attachment 102177 [details]
doc contains different first page footer

Problem description: 

Steps to reproduce:
1. Open the document in LibreOffice
2. Save as in .docx format
3. Open in MS Office 2007/2010.

Current behavior:
Different first footer not getting preserved.

Expected behavior:
Different first footer should preserved after RT.
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Yogesh Bharate 2014-07-03 04:28:57 UTC
In case there is a different first page FOOTER only (without a header) - the different footer is not getting RT.
Comment 2 Miklos Vajna 2014-07-15 12:57:26 UTC
14:27 < Yog_> fdo#80839 is fixed due to miklos patch, thnx :)

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8cf681c5049970573020d8b808c990441b9cf828