fdo#80839: Different first page footer property & footer reference is not preserved for footer.

Problem Description:
- If the document contains, only footer with different first page then after
RT titlePage is not preserved.
- XML Difference :
1) Original document : <w:sectPr> contains <w:titlePg>
2) Roundtrip document : <w:sectPr> does not contains <w:titlePg>
- In the case of titlePage HdFtDistanceGlue::StrictEqualTopBottom() was not
returning proper value, So LibreOffice was not exporting different first
page footer reference.

Solution:
Added proper handling of HdFtDistanceGlue::StrictEqualTopBottom() & remove
unnecessary part.

Change-Id: I557f3668f571936cdf7217a861e807c5f6406231