sw/source/filter/ww8/wrtww8.hxx
@@ -489,7 +489,6 @@ public:
     SwImplBookmarks maImplicitBookmarks;
     sw::Frames maFrames;             // The floating frames in this document
     const SwPageDesc *pAktPageDesc;
-    bool bPrevTextNodeIsEmpty;
     WW8_WrPlcPn* pPapPlc;
     WW8_WrPlcPn* pChpPlc;
     MSWordAttrIter* pChpIter;
